# pydantic-projections

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: validate_tests.py
.github/workflows/: ci.yml  publish.yml
benches/: conftest.py  test_project_bench.py  test_render_bench.py
scripts/: release.py  validate_tests.py
src/pydantic_projections/: __init__.py  _core.py  fastapi.py
tests/: conftest.py  models.py  test_config.py  test_errors.py  test_fastapi.py  test_helpers.py  test_nested.py  test_project.py  test_projection.py  test_property.py
