[project]
name = "pydantic-projections"
version = "0.3.0"
description = "Elegant projection of Pydantic BaseModels through Python Protocols."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Paul Soares", email = "polosoares@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["pydantic", "protocol", "projection", "serialization", "typing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_projections"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-describe>=2.2",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
describe_prefixes = ["describe_", "when_", "with_", "without_", "for_"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "PL",       # pylint subset
    "RUF",      # ruff-specific
    "S",        # flake8-bandit (security)
]
ignore = [
    "PLR0913",
    "PLR2004",
    "SIM102",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "PLR2004", "SIM117", "PLC0415", "PLR0915", "N802", "N803"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["pydantic_projections"]

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = false
warn_return_any = false
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
allow_redefinition = true

[tool.coverage.run]
source = ["pydantic_projections"]
branch = true

[tool.coverage.report]
fail_under = 92
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
